# The-Miblets-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_and_run.bat
Assets/UI/: HUD.xaml  MainMenu.xaml  OptionsMenu.xaml
Engine/: CMakeLists.txt
Engine/Core/: Engine.cpp  Engine.h
Engine/ECS/: Components.h  Registry.h
Engine/Platform/: GLFWWindow.cpp  GLFWWindow.h
Engine/RHI/Vulkan/: VulkanContext.cpp  VulkanContext.h
Engine/RHI/Vulkan/Shaders/: triangle.vert
Engine/Renderer/: Renderer.cpp  Renderer.h
Engine/UI/: NoesisSystem.cpp  NoesisSystem.h
Game/MibletsGame/: CMakeLists.txt  Components.h  Main.cpp  MibletsApp.cpp  MibletsApp.h  TurnManager.cpp  TurnManager.h
